# SwarMBots-UI

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  comms.h  gui.html  macs.txt  main.c  mbot_params.h  pair.py  pilot.py  robot_t.cpp  robot_t.h  swarm.cpp  swarm.h
data/: demo.txt  path1.txt  path10.txt  path2.txt  path3.txt  path5.txt  path6.txt  path7.txt
docker/: .bashrc  docker.sh
etc/: drive.c  swarm.cpp
examples/: CMakeLists.txt
examples/chaser/: CMakeLists.txt  chaser.h  main.cpp
examples/debug_threads/: CMakeLists.txt  main.cpp
examples/drive_triangle/: CMakeLists.txt  main.cpp
examples/gui/: CMakeLists.txt  main.cpp
examples/metric_tests/: CMakeLists.txt  main.cpp
examples/p_controller/: CMakeLists.txt  main.cpp
examples/path_follower/: CMakeLists.txt  main.cpp  path_follower.h
examples/path_recorder/: CMakeLists.txt  main.cpp
examples/path_recorder/paths/: path1.txt  path2.txt  path3.txt  path4.txt
examples/print_speed/: CMakeLists.txt  main.cpp
examples/spin_in_place/: CMakeLists.txt  main.cpp
examples/state_estimation/: CMakeLists.txt  comp_filter.h  main.cpp
examples/teleop/: CMakeLists.txt  main.cpp  teleop.h
include/: comms.h  mbot_lcm_msgs_serial.h  mbot_params.h  msgtypes.h  telemetry_server.h
mbot/: CMakeLists.txt  mbot.cpp  mbot.h  mbot.hpp
python/: monitor.py  pilot.py  uartSocket.py  uart_bridge.py
scripts/: build.sh  docker.sh  docker_exec.sh  docker_run.sh  docker_stop.sh  install.sh  run.sh
src/: CMakeLists.txt  drive.c  main.cpp
src/comms/: CMakeLists.txt  comms.c  comms.h
src/mbot/: CMakeLists.txt  mbot.cpp  mbot.h  mbot.hpp
src/mbot_lcm_msgs_serial/: CMakeLists.txt  mbot_lcm_msgs_serial.c  mbot_lcm_msgs_serial.h
