set(SOURCES mbot.cpp)
add_library(mbot ${SOURCES})

find_package(websocketpp CONFIG REQUIRED)
include(CheckLibraryExists)
check_library_exists(atomic __atomic_fetch_add_8 "" HAVE_LIBATOMIC)
if(HAVE_LIBATOMIC)
    target_link_libraries(mbot PRIVATE atomic pthread websocketpp::websocketpp)
endif()
target_link_libraries(mbot PRIVATE pthread websocketpp::websocketpp)